@startuml
hide circle
skinparam classAttributeIconSize 0
title University Academic Portal - Overall ERD

entity "users" as User {
  *id : bigint <<PK>>
  --
  name : varchar
  email : varchar <<UK>>
  password : varchar
  remember_token : varchar
  role : varchar
  photo : varchar
  preferences : json
  email_verified_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "students" as Student {
  *id : bigint <<PK>>
  user_id : bigint <<FK>>
  student_no : varchar <<UK>>
  dob : date
  gender : varchar
  nationality : varchar
  phone : varchar
  address : text
  emergency_contact_name : varchar
  emergency_contact_phone : varchar
  programme : varchar
  intake_year : varchar
  previous_institution : varchar
  previous_qualification : varchar
  status : varchar
  notes : text
  enrollment_date : date
  photo : varchar
  id_card : varchar
  transcript : varchar
  created_at : timestamp
  updated_at : timestamp
}

note right of Student
  Identity fields (name/email) are stored in `users`.
  `students` extends the user with academic/profile data.
end note

entity "courses" as Course {
  *id : bigint <<PK>>
  course_code : varchar <<UK>>
  title : varchar
  credits : int
  semester : varchar
  attendance_threshold : decimal(5,2)
  photo : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity "subjects" as Subject {
  *id : bigint <<PK>>
  course_id : bigint <<FK>>
  subject_code : varchar <<UK>>
  title : varchar
  credits : int
  description : text
  photo : varchar
  attendance_threshold : decimal(5,2)
  created_at : timestamp
  updated_at : timestamp
}

entity "course_student" as Enrollment {
  *id : bigint <<PK>>
  course_id : bigint <<FK>>
  student_id : bigint <<FK>>
  status : enum        ' pending, approved, rejected, withdrawal_pending
  created_at : timestamp
  updated_at : timestamp
  --
  <<UK(course_id,student_id)>>
}

entity "course_teacher" as CourseTeacher {
  *id : bigint <<PK>>
  course_id : bigint <<FK>>
  user_id : bigint <<FK>>
  created_at : timestamp
  updated_at : timestamp
  --
  <<UK(course_id,user_id)>>
}

entity "subject_teacher" as SubjectTeacher {
  *id : bigint <<PK>>
  subject_id : bigint <<FK>>
  user_id : bigint <<FK>>
  created_at : timestamp
  updated_at : timestamp
  --
  <<UK(subject_id,user_id)>>
}

entity "grades" as Grade {
  *id : bigint <<PK>>
  subject_id : bigint <<FK>>
  student_id : bigint <<FK>>
  graded_by : bigint <<FK,nullable>>
  reviewed_by : bigint <<FK,nullable>>
  score : decimal(5,2)
  status : enum        ' draft, pending, approved, rejected
  reviewed_at : timestamp
  rejection_reason : varchar
  created_at : timestamp
  updated_at : timestamp
  --
  <<UK(subject_id,student_id)>>
}

entity "grade_review_logs" as GradeLog {
  *id : bigint <<PK>>
  grade_id : bigint <<FK>>
  performed_by : bigint <<FK,nullable>>
  action : enum       ' submitted, approved, rejected
  reason : varchar
  meta : json
  created_at : timestamp
  updated_at : timestamp
}

entity "fees" as Fee {
  *id : bigint <<PK>>
  student_id : bigint <<FK>>
  amount : decimal(10,2)
  description : varchar
  status : enum       ' pending, payment_pending, failed, paid
  due_date : date
  paid_date : date
  payment_intent_id : varchar
  payment_method : varchar
  payment_processed_at : timestamp
  processed_by : bigint <<FK,nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "timetables" as Timetable {
  *id : bigint <<PK>>
  subject_id : bigint <<FK>>
  day_of_week : varchar
  start_time : time
  end_time : time
  location : varchar
  created_by : bigint <<FK,nullable>>
  created_at : timestamp
  updated_at : timestamp
  --
  <<UK(subject_id,day_of_week,start_time,end_time)>>
}

entity "attendances" as Attendance {
  *id : bigint <<PK>>
  subject_id : bigint <<FK>>
  student_id : bigint <<FK>>
  date : date
  status : enum       ' present, absent
  created_at : timestamp
  updated_at : timestamp
  --
  <<UK(subject_id,student_id,date)>>
}

entity "low_attendance_alert_states" as LowAlert {
  *id : bigint <<PK>>
  student_id : bigint <<FK,UK>>
  last_rate : decimal(5,2)
  is_below_threshold : bool
  last_alert_sent_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "announcements" as Announcement {
  *id : bigint <<PK>>
  user_id : bigint <<FK>>
  title : varchar
  body : text
  priority : varchar
  pinned : bool
  require_ack : bool
  audience : json
  publish_at : timestamp
  expires_at : timestamp
  visible_from : timestamp
  visible_until : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "announcement_reads" as AnnouncementRead {
  *id : bigint <<PK>>
  announcement_id : bigint <<FK>>
  user_id : bigint <<FK>>
  read_at : timestamp
  acknowledged_at : timestamp
  created_at : timestamp
  updated_at : timestamp
  --
  <<UK(announcement_id,user_id)>>
}

entity "messages" as Message {
  *id : bigint <<PK>>
  sender_id : bigint <<FK>>
  sender_role : varchar
  receiver_id : bigint <<FK>>
  receiver_role : varchar
  body : text
  read : bool
  created_at : timestamp
  updated_at : timestamp
}

entity "notifications" as Notification {
  *id : uuid <<PK>>
  type : varchar
  notifiable_type : varchar
  notifiable_id : bigint
  data : text
  read_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "contact_messages" as ContactMessage {
  *id : bigint <<PK>>
  first_name : varchar
  last_name : varchar
  email : varchar
  phone : varchar
  subject : varchar
  message : text
  reply : text
  is_read : bool
  replied_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "feedback_messages" as FeedbackMessage {
  *id : bigint <<PK>>
  name : varchar
  email : varchar
  type : varchar
  message : text
  is_read : bool
  replied_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "stripe_webhook_events" as StripeWebhookEvent {
  *id : bigint <<PK>>
  event_id : varchar <<UK>>
  event_type : varchar
  payload : json
  processed_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "system_settings" as SystemSetting {
  *id : bigint <<PK>>
  key : varchar <<UK>>
  value : text
  updated_by : bigint <<FK,nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "enrollment_status_logs" as EnrollmentStatusLog {
  *id : bigint <<PK>>
  enrollment_id : bigint <<FK,nullable>>
  student_id : bigint <<FK>>
  course_id : bigint <<FK>>
  from_status : varchar
  to_status : varchar
  action : varchar
  reason : text
  performed_by : bigint <<FK,nullable>>
  meta : json
  created_at : timestamp
  updated_at : timestamp
}

entity "fee_status_logs" as FeeStatusLog {
  *id : bigint <<PK>>
  fee_id : bigint <<FK>>
  from_status : varchar
  to_status : varchar
  action : varchar
  note : varchar
  performed_by : bigint <<FK,nullable>>
  meta : json
  created_at : timestamp
  updated_at : timestamp
}

'----------------------------------------------------
' Relationships
'----------------------------------------------------

User ||--o{ Student : has 0..1 profile

Course ||--o{ Subject
Course ||--o{ Enrollment
Student ||--o{ Enrollment

Course ||--o{ CourseTeacher
User   ||--o{ CourseTeacher : teaches

Subject ||--o{ SubjectTeacher
User    ||--o{ SubjectTeacher : teaches

Subject ||--o{ Grade
Student ||--o{ Grade
User    ||--o{ Grade : graded_by
User    ||--o{ Grade : reviewed_by
Grade   ||--o{ GradeLog
User    ||--o{ GradeLog : performed_by

Student ||--o{ Fee
User    ||--o{ Fee : processed_by

Subject ||--o{ Timetable
User    ||--o{ Timetable : created_by

Subject ||--o{ Attendance
Student ||--o{ Attendance
Student ||--o| LowAlert

User ||--o{ Announcement : author
Announcement ||--o{ AnnouncementRead
User ||--o{ AnnouncementRead

User ||--o{ Message : sender
User ||--o{ Message : receiver

User ||--o{ Notification : notifiable

User ||--o{ SystemSetting : updated_by

Enrollment ||--o{ EnrollmentStatusLog
Student ||--o{ EnrollmentStatusLog
Course ||--o{ EnrollmentStatusLog
User ||--o{ EnrollmentStatusLog : performed_by

Fee ||--o{ FeeStatusLog
User ||--o{ FeeStatusLog : performed_by

@enduml
